# ctrlx-os-snap-collection

./: LICENSE.txt  README.md
Ctrlx-contour-cnc-path/: README.md  main.py  setup.py
Ctrlx-yolo-Instance_segmentation_ONNX_HEF/: README.md  instance_segmentation.py  main.py  setup.py
moveit-mtc_kassow_onrobot/src/joystick_control/: package.xml  setup.py
moveit-mtc_kassow_onrobot/src/joystick_control/config/: joystick_teleop_params.yaml  moveit_servo.yaml
moveit-mtc_kassow_onrobot/src/joystick_control/joystick_control/: joystick.py  joystick_teleop_node.py  start_servo.py
moveit-mtc_kassow_onrobot/src/joystick_control/launch/: joystick_teleop.launch.py  servo_node.launch.py
moveit-mtc_kassow_onrobot/src/kr810_rg2_description/: CMakeLists.txt  package.xml
moveit-mtc_kassow_onrobot/src/kr810_rg2_description/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kr810_rg2.srdf  moveit_controllers.yaml  moveit_controllers_fake.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
moveit-mtc_kassow_onrobot/src/kr810_rg2_description/urdf/: kr810_rg2.ros2_control.xacro  kr810_rg2.urdf.xacro  rg2_gripper.urdf.xacro
moveit-mtc_kassow_onrobot/src/kr_robot_driver/: CMakeLists.txt  kr_robot_driver.xml  package.xml
moveit-mtc_kassow_onrobot/src/kr_robot_driver/hardware/: kr810_hardware.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/hardware/include/kr_robot_driver/: kr810_hardware.hpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/ci/minimal-example/: CMakeLists.txt  main.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/cmake/: kord-apiConfig.cmake.in
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/: Doxyfile.in  conf.py  index.rst  rebuild_docs.bash
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/_templates/: versions.html
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/api/: api.rst  appendix.rst  classes.rst  events.rst  flags.rst  full_api_reference.rst  handle_alarms.rst  request_response.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/configuration/: kord_ini.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/examples/: examples.rst  kord_brake_control.rst  kord_clean_alarm.rst  kord_direct_control_movement.rst  kord_fetch_data.rst  kord_get_tcp_cog.rst  kord_jl_discrete_movement.rst  kord_joint_movement.rst  kord_linear_movement.rst  kord_read_events.rst  kord_read_state.rst  kord_read_temperature.rst  kord_set_frame.rst  kord_set_load.rst  kord_set_oport.rst  kord_set_safe_output.rst  kord_skip_fetch_data.rst  kord_transfer_calibration_data.rst  kord_transfer_json.rst  kord_transfer_logs.rst  kord_transfer_more_files.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/faq/: faq.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/features/: features.rst  motion_constraints.rst  safety_zones.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/images/src/statistics/: KORD_Communication_Statistics.vsdx
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/installation/: installation.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/introduction/: introduction.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/docs/statistics/: statistics.rst
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/examples/: kord_brake_control.cpp  kord_clean_alarm.cpp  kord_fetch_data.cpp  kord_get_tcp_and_cog.cpp  kord_init.cpp  kord_init_and_fetch.cpp  kord_move_direct.cpp  kord_move_direct_interactive.cpp  kord_move_direct_torque.cpp  kord_move_joints.cpp  kord_move_joints_autorecover.cpp  kord_move_joints_discrete.cpp  kord_move_linear.cpp  kord_move_linear_discrete.cpp  kord_move_linear_quat.cpp  kord_move_velocity.cpp  kord_perf_test.cpp  kord_read_robot_info.cpp  kord_read_safety_zones.cpp  kord_read_state.cpp  kord_read_temperature.cpp  kord_read_versions.cpp  kord_retrieve_errors.cpp  kord_self_motion.cpp  kord_self_motion_interactive.cpp  kord_set_frame.cpp  kord_set_load.cpp  kord_set_oport.cpp  kord_set_safe_output.cpp  kord_skip_fetch_data.cpp  kord_software_update.cpp  kord_transfer_calibration_data.cpp  kord_transfer_json.cpp  kord_transfer_logs.cpp  kord_transfer_more_files.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/include/kord/: version.h.in
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/include/kord/api/: api_commands.h  api_request.h  connection_interface.h  kord.h  kord_control_interface.h  kord_io_request.h  kord_receive_interface.h
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/include/kord/polynomials/: from_constraints.h  spline_computation.h  spline_equations.h
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/include/kord/utils/: endian.h  logger.h  timex.h  utils.h  worker.h
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/src/api/: connection_interface.cpp  kord.cpp  kord_control_interface.cpp  kord_io_request.cpp  kord_receive_interface.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/src/polynomials/: from_constraints.cpp  polynomials.cpp  spline_computation.cpp  spline_equations.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/src/utils/: timex.cpp  utils.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/tests/: .gitignore  CMakeLists.txt  KORD.ini  README.md
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/tests/tests/: active_test.cpp  examples_test.cpp  motion_constraints_test.cpp  passive_test.cpp
moveit-mtc_kassow_onrobot/src/kr_robot_driver/kord_api/tests/utils/: utils.h
moveit-mtc_kassow_onrobot/src/mtc_demo/: CMakeLists.txt  package.xml
moveit-mtc_kassow_onrobot/src/mtc_demo/launch/: joystick_mtc_complete.launch.py  mtc_kr810.rviz  visualization_kr810.launch.py
moveit-mtc_kassow_onrobot/src/mtc_demo/scripts/: onrobot_tcp_controller.py
moveit-mtc_kassow_onrobot/src/mtc_demo/src/: mtc_node.cpp
(+42 files in other folders)
